# Privacy-Preserving-Efficent-Decision-Tree

./: .gitignore  CMakeLists.txt  README.md  bit_compression.cpp  bit_compression.h  client_main.cpp  config.cc  config.h  decision_tree.cc  decision_tree.h  decision_tree_client.cpp  decision_tree_server.cpp  deploy.sh  main.cc  network.cc  network.h  secret_sharing.cc  secret_sharing.h  secret_sharing_efficient_tools.cpp  secret_sharing_efficient_tools.h  server_main.cpp  test_cloud_client.cpp  test_cloud_server.cpp  test_driver.cc  test_driver.h  test_main.cpp  types.cc  types.h  utils.cc  utils.h
